[package]
name = "etty-macros"
description = "macros for etty"
version = "0.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["rueyxian <yrueyxian@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.103", features = ["extra-traits", "full" ] }
quote = "1.0.21"
proc-macro2 = "1.0.47"

